# design-patterns-cpp

./: CMakeLists.txt  README  abstract-factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  composite.cpp  cpp-notes.md  factory-method.cpp  prototype.cpp  run-targets.ps1  singleton.cpp
